# rubric-merge

./: .gitignore  Cargo.toml  example.env  flake.nix
.github/workflows/: nix.yml
nix/: docker-image.nix  package.nix
src/: crobot.rs  main.rs  postgres.rs  qpay.rs
