[package]
name = "rubric-merge"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.14.0"
postgres = "0.19.10"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
urlencoding = "2.1.3"
